# objectively

./: .gitignore  Cargo.toml  README.md  chal.olc  notes
c_src/: Makefile  amd64_syscall.c  builtins.c  builtins.h  dict.c  dict.h  errors.c  errors.h  gc.c  gc.h  interpreter.c  interpreter.h  main.c  object.c  object.h  oly  test  test.olc  thread.c  thread.h
py_compiler/: compiler.py  lexer.py  parser.py  stress.olc  stress.oly
src/: builtins.rs  gcell.rs  gdict.rs  interpreter.rs  main.rs  object.rs
