[package]
name = "objectively"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
shredder_derive = "0.2.0"
qcell = "0.4.3"

[dependencies.shredder]
version = "0.2.0"
features = ["nightly-features"]