[package]
name = "objectively"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
qcell = "0.4.3"
parking_lot = "0.11.2"
shredder_derive = "0.2.0"
take_mut = "0.2.2"

[dependencies.shredder]
version = "0.2.0"
features = ["nightly-features"]