[package]
name = "objectively"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
enum_dispatch = "0.3.7"
lazy_static = "1.4"
leb128 = "0.2.5"
num_enum = "0.5.4"
parking_lot = "0.11.2"
shredder_derive = "0.2.0"
hashbrown = { version = "0.11.2", features = ["raw"] }

[dependencies.shredder]
version = "0.2.0"
features = ["nightly-features"]